Fixed violation of DIP