@@ -4,23 +4,29 @@ import org.apache.logging.log4j.LogManager;
 import org.apache.logging.log4j.Logger;
 
 import java.util.ArrayList;
+import java.util.List;
 
 public class PathTraversal implements iPathTraversal {
 
     private static final Logger logger = LogManager.getLogger();
     MazeArray mazeArray = new MazeArray();
     PathSequence pathSequence = new PathSequence();
+    List<Integer> exitPosition = new ArrayList<>();
+    List<Integer> entryPosition = new ArrayList<>();
 
+    public PathTraversal(){
+        this.exitPosition = findExit();
+        this.entryPosition = findEntry();
+    }
+    
     //Method to find exit point
     @Override
-    public ArrayList<Integer> findExit(){
-        ArrayList<Integer> exitPosition = new ArrayList<>();
-
+    public List<Integer> findExit(){
         for (int i =0; i < mazeArray.mazeSize(); i++){
-            ArrayList<Character> row = mazeArray.currentRow(i);
-            if (row.get(mazeArray.mazeSize() - 1).equals(' ')){
+            List<Character> row = mazeArray.currentRow(i);
+            if (!row.getLast().equals('#')){
                 exitPosition.add(i);
-                exitPosition.add(mazeArray.mazeSize() - 1);
+                exitPosition.add(mazeArray.currentRow(i).size() - 1);
                 return exitPosition;
             }
         }
@@ -30,13 +36,11 @@ public class PathTraversal implements iPathTraversal {
     // Path Traversal Methods
     //Method to find entry point
     @Override
-    public ArrayList<Integer> findEntry(){
-        ArrayList<Integer> entryPosition = new ArrayList<>();
-        for (int i =0; i < mazeArray.mazeSize();i++){
-            ArrayList<Character> row = mazeArray.currentRow(i);
-            if (row.getFirst().equals(' ')){
+    public List<Integer> findEntry(){
+        for (int i =0; i < mazeArray.mazeSize(); i++){
+            List<Character> row = (ArrayList<Character>) mazeArray.currentRow(i);
+            if (!row.getFirst().equals('#')){
                 entryPosition.add(i);
-                entryPosition.add(0);
                 return entryPosition;
             }
         }
@@ -45,7 +49,6 @@ public class PathTraversal implements iPathTraversal {
 
     // Helper method to check if the exit has been reached
     public boolean reachedExit(int currentRow, int currentCol) {
-        ArrayList<Integer> exitPosition = findExit();
         return currentRow == exitPosition.get(0) && currentCol == exitPosition.get(1);
     }
 
@@ -55,7 +58,7 @@ public class PathTraversal implements iPathTraversal {
         // Check if the position is within bounds and is a moveable space
         return i >= 0 && i < mazeArray.mazeSize() &&
                 j >= 0 && j < mazeArray.currentRow(i).size() &&
-                mazeArray.currentRow(i).get(j).equals(' '); // Ensure it's a moveable space
+                !mazeArray.currentRow(i).get(j).equals('#'); // Ensure it's a moveable space
     }
 
     public int getNextRow(int currentRow, Direction direction) {
@@ -78,8 +81,8 @@ public class PathTraversal implements iPathTraversal {
         int rightRow = getNextRow(currentRow, rightDirection);
         int rightCol = getNextCol(currentCol, rightDirection);
         if (canMoveTo(rightRow, rightCol)) {
-            pathSequence.setSequence("R"); // Log the right turn
-            pathSequence.setSequence("F"); // Log moving forward
+            pathSequence.appendSequence("R"); // Log the right turn
+            pathSequence.appendSequence("F"); // Log moving forward
             moveResult.add(rightRow); // New row
             moveResult.add(rightCol); // New column
             moveResult.add(rightDirection); // New direction
@@ -90,7 +93,7 @@ public class PathTraversal implements iPathTraversal {
         int forwardRow = getNextRow(currentRow, currentDirection);
         int forwardCol = getNextCol(currentCol, currentDirection);
         if (canMoveTo(forwardRow, forwardCol)) {
-            pathSequence.setSequence("F"); // Log moving forward
+            pathSequence.appendSequence("F"); // Log moving forward
             moveResult.add(forwardRow); // New row
             moveResult.add(forwardCol); // New column
             moveResult.add(currentDirection); // Keep direction
@@ -102,8 +105,8 @@ public class PathTraversal implements iPathTraversal {
         int leftRow = getNextRow(currentRow, leftDirection);
         int leftCol = getNextCol(currentCol, leftDirection);
         if (canMoveTo(leftRow, leftCol)) {
-            pathSequence.setSequence("L"); // Log the left turn
-            pathSequence.setSequence("F"); // Log moving forward
+            pathSequence.appendSequence("L"); // Log the left turn
+            pathSequence.appendSequence("F"); // Log moving forward
             moveResult.add(leftRow); // New row
             moveResult.add(leftCol); // New column
             moveResult.add(leftDirection); // New direction
@@ -112,39 +115,50 @@ public class PathTraversal implements iPathTraversal {
 
         // 4. Turn around if all other options are blocked
         Direction reverseDirection = currentDirection.turnRight().turnRight();
-        pathSequence.setSequence("R"); // Log the first right turn
-        pathSequence.setSequence("R"); // Log the second right turn (180° turn)
+        pathSequence.appendSequence("R"); // Log the first right turn
+        pathSequence.appendSequence("R"); // Log the second right turn (180° turn)
         moveResult.add(currentRow); // Stay in the same row
         moveResult.add(currentCol); // Stay in the same column
         moveResult.add(reverseDirection); // Update to reversed direction
         return moveResult;
     }
 
-    public void pathTraversal() {
-        ArrayList<Integer> entryIndex = findEntry(); // Find the entry position
+    public void pathTraversal(boolean print) {
+        // DUPLICATE CODE
+        List<Integer> entryIndex = entryPosition; // Find the entry position
         if (entryIndex.isEmpty()) {
             logger.error("No entry point found in the maze.");
             return; // Abort if no entry point exists
         }
 
         // Initialize position and direction
-        int currentRow = entryIndex.get(0);
-        int currentCol = entryIndex.get(1);
+        int currentRow = entryIndex.getFirst();
+        int currentCol = 0; // Starting Column is arbritary
+
         Direction currentDirection = Direction.RIGHT; // Default starting direction
 
         logger.info("**** Starting path traversal ");
 
         // Traverse the maze until reaching the exit
         while (!reachedExit(currentRow, currentCol)) {
+            // System.out.printf("X: {0}, Y: {1}, Direction: {2}\n", currentRow, currentCol, currentDirection);
             ArrayList<Object> moveResult = move(currentRow, currentCol, currentDirection);
-
+            logger.info("Is this run1?");
             // Update current position and direction
             currentRow = (int) moveResult.get(0); // New row
             currentCol = (int) moveResult.get(1); // New column
+            logger.info("Is this run2?");
             currentDirection = (Direction) moveResult.get(2); // New direction
+            if (currentRow == 0 && currentCol == 1){
+                break;
+            }
         }
 
         logger.info("**** Exit reached at (" + currentRow + ", " + currentCol + ")");
-        pathSequence.printSequence(); // Output the path taken
+        if (print) {
+            pathSequence.printSequence(); // Output the path taken
+        } else{
+            return;
+        }
     }
 }
